<resources>
    <string name="facebook_app_id">1592303950966131</string>
    <string name="fb_login_protocol_scheme">fb1592303950966131</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">99GShvQUArJfWGNCzgCvFjAGC</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Pcy6kvtTFIYWyLiVaX6lJbLVvBF22Z584yjwAapfR4rVawU54H</string>
    <string name="app_name">HatzOff</string>
    <string name="welcome">Welcome!</string>
    <string name="ob_desc2">We all have specialities \nin us</string>
    <string name="ob_desc3">It\'s time for the World \nto Appreciate it!!</string>
    <string name="id74839202010">id74839202010</string>
    <string name="_9min_ago">9Min ago</string>
    <string name="what_are_you_n_passionate_about">What are you \n Passionate About?</string>
    <string name="select_your_interests">Select your Interests</string>
    <string name="next">Next</string>
    <string name="singing">Singing</string>
    <string name="acting">Acting</string>
    <string name="standup_comedy">Standup Comedy</string>
    <string name="creative_expert">Creative Expert</string>
    <string name="mimicry">Mimicry</string>
    <string name="directing">Directing</string>
    <string name="content_creator">Content Creator</string>
    <string name="dancing">Dancing</string>
    <string name="cinematography">Cinematography</string>
    <string name="dialog_writing">Dialog Writing</string>
    <string name="stuntman">Stuntman</string>
    <string name="story_telling">Story Telling</string>
    <string name="i_read_all_terms_and_conditions">I read all terms and Conditions</string>
    <string name="verification">Verification</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="_6765">6765</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_otp">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="twitter">Twitter</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign Up</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="we_all_have_specialities1_nin_us">We all have specialities \nin us</string>
    <string name="_0_3_px">0.3 x</string>
    <string name="_0_5_px">0.5 x</string>
    <string name="_1_px">1 x</string>
    <string name="_1_5_px">2 px</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="draft">Draft</string>
    <string name="post">Post</string>
    <string name="add_captions">Add Captions</string>
    <string name="add_location">Add Location</string>
    <string name="duet_react_off">Duet/React:Off</string>
    <string name="who_can_view_this_video">Who can view this video</string>
    <string name="comments_off">Comments:Off</string>
    <string name="save_to_phone">Save to Phone</string>
    <string name="share_this_video">Share this video:</string>
    <string name="sign_up">Login</string>
    <string name="setsmile">SetSmile</string>
    <string name="text">Text</string>
    <string name="effect">Effect</string>
    <string name="sound">Sound</string>
    <string name="filter5">Filter5</string>
    <string name="filter4">Filter4</string>
    <string name="filter3">Filter3</string>
    <string name="filter2">Filter2</string>
    <string name="filter1">Filter1</string>
    <string name="todo">TODO</string>
    <string name="discover">discover</string>
    <string name="popular">popular</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="cloudfront">https://dknuetm1wz9u1.cloudfront.net</string>
    <string name="s3_secret">TbylUlYJrhwvjK4JZ4s9Y6UKohhwbz/dTra2a1Xu</string>
    <string name="s3_access_key">AKIA2J4ON2CTMWUNVXJO</string>
    <string name="s3_bucket">hatzoff2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="private1">private</string>
    <string name="public1">public</string>
    <string name="profile">profile</string>
    <string name="rzp_test">rzp_test_059VlGj0C7fgCu</string>
    <string name="login_gmail">Login with Gmail</string>
    <string name="sign_facebook">Login with Facebook</string>
    <string name="continue_with_facebook">continue WITH facebook</string>
    <string name="continue_with_google">continue WITH google</string>
</resources>