<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notuseddesign.MainActivity"
    android:orientation="vertical"
    android:background="#181b2c">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone_number"
            android:textColor="#fff"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6765"
            android:id="@+id/textcode"
            android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cancelred"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="8dp" tools:targetApi="lollipop">


        <EditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_otp"
            android:layout_gravity="center"
            android:id="@+id/editTextCode"
            android:layout_margin="10dp"
            android:textColorHint="#626576"
            android:textColor="#fff"
            android:background="@android:color/transparent"
            android:autofillHints=""
             />

    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="timer"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:id="@+id/texttimer"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:layout_margin="25dp"
        android:layout_gravity="center"
        android:id="@+id/buttonSignIn"
        android:background="@drawable/button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#fff"

            android:textSize="15sp"
            android:layout_margin="10dp"/>
    </LinearLayout>


</LinearLayout>
</LinearLayout>