<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notuseddesign.MainActivity"
    android:orientation="vertical"
    android:background="#181b2c">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cancelred"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="38dp"
        android:elevation="8dp" tools:targetApi="lollipop">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_name"
            android:layout_gravity="center"
            android:id="@+id/name"
            android:layout_margin="10dp"
            android:textColorHint="#626576"
            android:textColor="#fff"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:autofillHints="" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cancelred"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="28dp"
        android:elevation="8dp" tools:targetApi="lollipop">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_mobile_number"
            android:layout_gravity="center"
            android:id="@+id/mobile"
            android:layout_margin="10dp"
            android:textColor="#fff"
            android:inputType="number"
            android:textColorHint="#626576"
            android:background="@android:color/transparent"
            android:importantForAutofill="no" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancelred"
        android:layout_margin="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#626576"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:id="@+id/buttonContinue"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@drawable/button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#626576"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <LinearLayout
        android:id="@+id/fblogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/blue_button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="#fff"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/light_blue_button">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:textColor="#fff"
                android:textSize="15sp"
                android:layout_margin="10dp"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>