<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".notuseddesign.MainActivity"
    android:background="#181b2c">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textColor="#fff"
            android:fontFamily="@@font/open_sans_bold"
            android:id="@+id/tv_header"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_all_have_specialities1_nin_us"
            android:textSize="22sp"
            android:id="@+id/tv_desc"
            android:textColor="#fff"
            android:fontFamily="@@font/open_sans_bold"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="0.7">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/working"
            android:id="@+id/work"
            android:contentDescription="@string/todo" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>