<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.InterestActivity"
    android:background="#181b2c">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:fontFamily="@@font/open_sans_bold"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/what_are_you_n_passionate_about"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:fontFamily="@@font/open_sans_bold"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/select_your_interests"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chk_term"
                android:text="@string/i_read_all_terms_and_conditions"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_height="wrap_content"/>

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:textColor="#fff"/>-->
        </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn6"
                android:text="@string/next"
                android:id="@+id/next"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>