<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todo" />


            </RelativeLayout>



        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cancelred"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:elevation="8dp" tools:targetApi="lollipop">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_phone_number"
            android:layout_gravity="center"
            android:id="@+id/mobile"
            android:layout_margin="10dp"
            android:textColorHint="#626576"
            android:textColor="#fff"
            android:inputType="number"
            android:background="@android:color/transparent"
            android:autofillHints="" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:padding="4dp"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@drawable/button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:layout_margin="10dp"/>
    </LinearLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_marginStart="15sp"
        android:background="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_weight="0.7"
        android:textSize="16sp"

        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_marginEnd="15sp"
        android:background="@color/white"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/button"
        android:layout_margin="15dp"
        android:id="@+id/twitter_login_button"
        android:clipToPadding="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <ImageView
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:padding="3sp"
            android:src="@drawable/goog"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingEnd="62dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/continue_with_google"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="12dp"
            android:focusable="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/buttonsignup"
        android:layout_margin="15dp"
        android:clipToPadding="false"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:id="@+id/loginbutton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusable="true">
        <ImageView
            android:layout_width="34dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:padding="3sp"
            android:layout_gravity="center"
            android:src="@drawable/fbb"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingEnd="62dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-light"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="12sp"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="If you Have'nt account with us?"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:id="@+id/signup"
            android:textColor="@color/blue"
            android:layout_marginLeft="4sp"
            android:fontFamily="@font/open_sans_bold"/>

    </LinearLayout>


</LinearLayout>
</LinearLayout>